--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests/**/**.test.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "concurrently": "^3.5.1",
     "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.4",
